[gd_scene load_steps=4 format=3 uid="uid://drr5rd3uvc6jr"]

[ext_resource type="Script" uid="uid://rw1w6bmapgq7" path="res://Scripts/main.gd" id="1_bo1nx"]
[ext_resource type="PackedScene" uid="uid://dw0y8cwqnon53" path="res://Scenes/Telemetry.tscn" id="2_8gbba"]
[ext_resource type="Script" uid="uid://dgoefypnwhgi5" path="res://Scripts/connection_window.gd" id="3_8gbba"]

[node name="Main" type="Node"]
script = ExtResource("1_bo1nx")

[node name="GameScreen" parent="." instance=ExtResource("2_8gbba")]

[node name="ConnectionWindow" type="Window" parent="."]
position = Vector2i(280, 170)
size = Vector2i(500, 300)
script = ExtResource("3_8gbba")

[node name="VBoxContainer" type="VBoxContainer" parent="ConnectionWindow"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50
alignment = 1

[node name="Label" type="Label" parent="ConnectionWindow/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "IP du serveur KSP"
horizontal_alignment = 1

[node name="LineEdit" type="LineEdit" parent="ConnectionWindow/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Button" type="Button" parent="ConnectionWindow/VBoxContainer"]
layout_mode = 2
text = "â†’"

[connection signal="connect_requested" from="ConnectionWindow" to="." method="_on_connection_window_connect_requested"]
